buildscript {
    repositories {
        mavenCentral()
    }
}

repositories {
    mavenCentral()
}

ext.junitPlatformVersion = '1.4.2'
ext.junitJupiterVersion = '5.4.2'

apply plugin: 'java'

jar {
    baseName = 'duly-noted'
    version = '0.1-SNAPSHOT'
}

compileTestJava {
    sourceCompatibility = 1.9
    targetCompatibility = 1.9
}

test {
    useJUnitPlatform {
        systemProperty 'java.util.logging.manager', 'java.util.logging.LogManager'
    }
}

dependencies {
    testCompile("org.hamcrest:java-hamcrest:2.0.0.0")
    testCompile("org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}")
    testRuntime("org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}")
    compile("org.springframework:spring-core:5.1.8.RELEASE")

    // To avoid compiler warnings about @API annotations in JUnit code
    testCompileOnly('org.apiguardian:apiguardian-api:1.0.0')
}

